# geocardo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/geocardo-py/: Cargo.toml
crates/geocardo-py/src/: lib.rs
docs/architecture/: README.md
docs/assets/: README.md
src/geocardo/: __init__.py
tests/: test_sanity.py
